# insightpii

./: .dockerignore  .gitignore  Dockerfile  app.py  htmlTemplates.py  pdf_chat_page.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
terraform/: backend.tf  main.tf  variables.tf
