[tool.poetry]
name = "insightaiq"
version = "0.1.0"
description = "insightPII module"
authors = ["bharathkreddy <bharathreddy@insightaiq.com>"]
license = "copyright©InsightAIQ"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
python-dotenv = "^1.0.0"
streamlit = "^1.28.2"
psycopg2-binary = "^2.9.9"
snowflake-connector-python = {extras = ["pandas"], version = "^3.5.0"}
azure-storage-blob = "^12.19.0"
azure-cosmos = "^4.5.1"
azure-ai-textanalytics = "^5.3.0"
azure-cognitiveservices-vision-computervision = "^0.9.0"
qdrant-client = "^1.6.9"
openai = {extras = ["embeddings"], version = "^1.3.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
